# PRG1

./: README.md  zad2.cpp  zad3.cpp
PracaZaliczeniowa/: Air.cpp  Air.h  BattleFactory.cpp  BattleFactory.h  Belt.cpp  Belt.h  CMakeLists.txt  Character.cpp  Character.h  Corrupted.cpp  Corrupted.h  DarkTome.cpp  DarkTome.h  Earth.cpp  Earth.h  FactoryChoose.cpp  FactoryChoose.h  Field.h  FieldFactory.cpp  FieldFactory.h  Forest.cpp  Forest.h  Game.cpp  Game.h  Goblin.cpp  Goblin.h  Holy.cpp  Holy.h  Lake.cpp  Lake.h  LevelUp.cpp  LevelUp.h  Map.cpp  Map.h  Monster.h  Mountain.cpp  Mountain.h  Move.cpp  Move.h  Moving.cpp  (+17 more)
zjazd2/: a.out  zad1.cpp  zad4.cpp
zjazd3/: a.out  zadanie2.cpp  zadanie5.cpp  zadanie6.cpp
zjazd4/: a.out  zadanie2.cpp  zadanie3.cpp
